2005-10-06  Per Bothner  <per@bothner.com>

	* Makefile.am: Also search inherited $CLASSPATH - though last.

2005-10-05  Per Bothner  <per@bothner.com>

	* Makefile.am: Add "." to CLASSPATH various places.

	* num-test.scm: Rewrite to use SRFI-64 "testing".
	* Makefile.am: Update accordingly.

2005-09-27  Per Bothner  <per@bothner.com>

	Add test for Savannah bug #14640 (internal compile error when
	using "location").
	* module1.scm (mod1-v5): Declare and export new variable.
	* module2.scm (mod2-v5); Access mod1-v5 using a location, only.
	* obj-test.scm: Check that mod2-v5 is correct.

2005-09-26  Per Bothner  <per@bothner.com>

	* gui-test.scm (testimage): Update read-image -> image-read.
	Use a publicly available image URL.

2005-08-03  Dean Ferreyra <dean@octw.com>

	* classes1.scm (datetest-ns, make-date-test): Move from here ...
	* classes2.scm: .. to here. This tests reference to class in
	imported module.

2005-08-03  Per Bothner  <per@bothner.com>

	* obj-test.scm: Test new (*:METHOD ...) syntax.

2005-07-27  Per Bothner  <per@bothner.com>

	* Makefile.am (EXTRA_DIST): Add moduleFT.scm.

2005-07-23  Per Bothner  <per@bothner.com>

	* misc-test.scm: New tests, from Common Lisp hyperspec, for testing
	*print-radix* and *print-base*.

	* misc-test.scm: New test for future inside fluid-let.

2005-07-20  Per Bothner  <per@bothner.com>

	* mac-test.scm: New test based on Savanah bug report #13821.

2005-06-27  Per Bothner  <per@bothner.com>

	* classes1.scm (<SimapleA>): A bunch of new methods to test various
	accesses nested in lambda's inside methods.
	One test is a bug reported by Dean Ferreyra 2005-06-09.
	* obj-test.scm: Test them.

2005-06-02  Per Bothner  <per@bothner.com>

	Add test for re-exported imported macro.
	* module0.scm (mod0-m1): Return result as vector rather than sum.
	* module3.scm (test3-import1): Also test mod0-m1 invocation.
	* obj-test.scm: Update expected result.

2004-10-26  Chris Dean  <ctdean@sokitomi.com>
