@@ -1,3 +1,9 @@
+2005-10-24  Per Bothner  <per@bothner.com>
+
+	* Makefile.am (check-num): Remove old dependency on testing.zip.
+
+	* num-test.scm: Add tests using test-error and test-assert.
+
 2005-10-06  Per Bothner  <per@bothner.com>
 
 	* Makefile.am: Also search inherited $CLASSPATH - though last.
